logs/dag_id=Data_Ingestion/run_id=manual__2024-01-12T06:10:34.095568+00:00/task_id=crt_load/attempt=1.log
[2024-01-12T06:10:39.571+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Data_Ingestion.crt_load manual__2024-01-12T06:10:34.095568+00:00 [queued]>
[2024-01-12T06:10:39.575+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Data_Ingestion.crt_load manual__2024-01-12T06:10:34.095568+00:00 [queued]>
[2024-01-12T06:10:39.575+0000] {taskinstance.py:1359} INFO - Starting attempt 1 of 1
[2024-01-12T06:10:39.580+0000] {taskinstance.py:1380} INFO - Executing <Task(PostgresOperator): crt_load> on 2024-01-12 06:10:34.095568+00:00
[2024-01-12T06:10:39.583+0000] {standard_task_runner.py:57} INFO - Started process 1961 to run task
[2024-01-12T06:10:39.585+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Data_Ingestion', 'crt_load', 'manual__2024-01-12T06:10:34.095568+00:00', '--job-id', '90', '--raw', '--subdir', 'DAGS_FOLDER/data_ingestion_layer.py', '--cfg-path', '/tmp/tmpstunrt7o']
[2024-01-12T06:10:39.587+0000] {standard_task_runner.py:85} INFO - Job 90: Subtask crt_load
[2024-01-12T06:10:39.608+0000] {task_command.py:415} INFO - Running <TaskInstance: Data_Ingestion.crt_load manual__2024-01-12T06:10:34.095568+00:00 [running]> on host 9e5ee476ef7d
[2024-01-12T06:10:39.748+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='thanatthuch@msyne.co.th' AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Data_Ingestion' AIRFLOW_CTX_TASK_ID='crt_load' AIRFLOW_CTX_EXECUTION_DATE='2024-01-12T06:10:34.095568+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-12T06:10:34.095568+00:00'
[2024-01-12T06:10:39.749+0000] {sql.py:274} INFO - Executing: INSERT INTO medcury-de.ProductSalesAmountByMonth (ProductID, ProductName, salesAmount, percentage_change, start_date)
SELECT ProductId, ProductName, salesAmount, percentage_change, start_date
FROM pst_staging.ProductSalesAmountByMonth
[2024-01-12T06:10:39.752+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-01-12T06:10:39.755+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-01-12T06:10:39.757+0000] {sql.py:418} INFO - Running statement: INSERT INTO medcury-de.ProductSalesAmountByMonth (ProductID, ProductName, salesAmount, percentage_change, start_date)
SELECT ProductId, ProductName, salesAmount, percentage_change, start_date
FROM pst_staging.ProductSalesAmountByMonth, parameters: None
[2024-01-12T06:10:39.757+0000] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "-"
LINE 1: INSERT INTO medcury-de.ProductSalesAmountByMonth (ProductID,...
                           ^

[2024-01-12T06:10:39.761+0000] {taskinstance.py:1398} INFO - Marking task as FAILED. dag_id=Data_Ingestion, task_id=crt_load, execution_date=20240112T061034, start_date=20240112T061039, end_date=20240112T061039
[2024-01-12T06:10:39.766+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/utils/email.py:154: RemovedInAirflow3Warning: Fetching SMTP credentials from configuration variables will be deprecated in a future release. Please set credentials using a connection instead.
  send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)

[2024-01-12T06:10:39.766+0000] {configuration.py:1063} WARNING - section/key [smtp/smtp_user] not found in config
[2024-01-12T06:10:39.766+0000] {email.py:270} INFO - Email alerting: attempt 1
[2024-01-12T06:10:39.769+0000] {configuration.py:1063} WARNING - section/key [smtp/smtp_user] not found in config
[2024-01-12T06:10:39.769+0000] {email.py:270} INFO - Email alerting: attempt 1
[2024-01-12T06:10:39.770+0000] {taskinstance.py:2005} ERROR - Failed to send email to: thanatthuch@msyne.co.th
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1516, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1679, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1742, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "-"
LINE 1: INSERT INTO medcury-de.ProductSalesAmountByMonth (ProductID,...
                           ^


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 2418, in email_alert
    send_email(task.email, subject, html_content)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/utils/email.py", line 80, in send_email
    return backend(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/utils/email.py", line 154, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/utils/email.py", line 272, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/utils/email.py", line 317, in _get_smtp_connection
    return smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/local/lib/python3.8/smtplib.py", line 255, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/local/lib/python3.8/smtplib.py", line 339, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/local/lib/python3.8/smtplib.py", line 310, in _get_socket
    return socket.create_connection((host, port), timeout,
  File "/usr/local/lib/python3.8/socket.py", line 808, in create_connection
    raise err
  File "/usr/local/lib/python3.8/socket.py", line 796, in create_connection
    sock.connect(sa)
OSError: [Errno 99] Cannot assign requested address

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 2003, in handle_failure
    self.email_alert(error, task)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 2420, in email_alert
    send_email(task.email, subject, html_content_err)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/utils/email.py", line 80, in send_email
    return backend(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/utils/email.py", line 154, in send_email_smtp
    send_mime_email(e_from=mail_from, e_to=recipients, mime_msg=msg, conn_id=conn_id, dryrun=dryrun)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/utils/email.py", line 272, in send_mime_email
    smtp_conn = _get_smtp_connection(smtp_host, smtp_port, smtp_timeout, smtp_ssl)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/utils/email.py", line 317, in _get_smtp_connection
    return smtplib.SMTP(host=host, port=port, timeout=timeout)
  File "/usr/local/lib/python3.8/smtplib.py", line 255, in __init__
    (code, msg) = self.connect(host, port)
  File "/usr/local/lib/python3.8/smtplib.py", line 339, in connect
    self.sock = self._get_socket(host, port, self.timeout)
  File "/usr/local/lib/python3.8/smtplib.py", line 310, in _get_socket
    return socket.create_connection((host, port), timeout,
  File "/usr/local/lib/python3.8/socket.py", line 808, in create_connection
    raise err
  File "/usr/local/lib/python3.8/socket.py", line 796, in create_connection
    sock.connect(sa)
OSError: [Errno 99] Cannot assign requested address
[2024-01-12T06:10:39.775+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 90 for task crt_load (syntax error at or near "-"
LINE 1: INSERT INTO medcury-de.ProductSalesAmountByMonth (ProductID,...
                           ^
; 1961)
[2024-01-12T06:10:39.798+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2024-01-12T06:10:39.809+0000] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
